@@ -185,3 +185,4 @@
 ( cvs diff -u -r 1.2.2.74 -r 1.2.2.75 src/vcalendar.c;  ) > 2.0.0cvs4.patchset
 ( cvs diff -u -r 1.1.2.39 -r 1.1.2.40 src/plugin.c;  cvs diff -u -r 1.2.2.98 -r 1.2.2.99 src/vcal_folder.c;  ) > 2.0.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/common-views.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/common-views.h;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/day-view.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/month-view.c;  ) > 2.0.0cvs6.patchset
+( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/day-view.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/month-view.c;  cvs diff -u -r 1.1.2.40 -r 1.1.2.41 src/plugin.c;  cvs diff -u -r 1.2.2.99 -r 1.2.2.100 src/vcal_folder.c;  cvs diff -u -r 1.2.2.75 -r 1.2.2.76 src/vcalendar.c;  ) > 2.0.0cvs7.patchset
