@@ -1,3 +1,12 @@
+2008-08-05 [colin]	2.0.0cvs7
+
+	* src/day-view.c
+	* src/month-view.c
+	* src/plugin.c
+	* src/vcal_folder.c
+	* src/vcalendar.c
+		Undeprecate GtkCTree
+
 2008-07-31 [colin]	2.0.0cvs6
 
 	* src/common-views.c
